--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -57,7 +57,8 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal"
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/tv_quick_register"
@@ -120,7 +121,7 @@
                 android:layout_marginTop="25.0dip"
                 android:background="@color/app_white"
                 android:orientation="vertical"
-                android:visibility="visible"
+                android:visibility="gone"
                 >
 
                 <RelativeLayout
@@ -227,6 +228,7 @@
                         android:layout_toRightOf="@id/et_check_code"
                         android:scaleType="fitXY" />
                 </RelativeLayout>
+
             </LinearLayout>
 
             <LinearLayout
@@ -236,7 +238,7 @@
                 android:layout_marginTop="25.0dip"
                 android:background="@color/app_white"
                 android:orientation="vertical"
-                android:visibility="gone" >
+                android:visibility="visible" >
 
                 <RelativeLayout
                     android:layout_width="fill_parent"
@@ -346,6 +348,11 @@
                         android:layout_toRightOf="@id/et_check_picture"
                         android:scaleType="fitXY" />
                 </RelativeLayout>
+                <Button
+                    android:id="@+id/getWBInfo"
+                    android:text="获取微博用户信息"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <Button
@@ -394,7 +401,7 @@
                     android:background="@drawable/btn_quick_register_bg_selector"
                     android:gravity="center_horizontal"
                     android:padding="10.0dip"
-                    android:visibility="invisible" >
+                    android:visibility="gone" >
 
                     <TextView
                         android:layout_width="wrap_content"
